--- a/index.html
+++ b/index.html
@@ -4,18 +4,20 @@
 	<meta charset="utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<title>Soundfry Follow Button</title>
-		<script async src="app.js" charset="utf-8"></script>
+	<script async src="app.js" charset="utf-8"></script>
 </head>
 <body>
-<a href="https://soundfry.com/soundfry"><div class="sfb sfb-outline-primary"><i class="soundfry"></i> Follow</div></a>
-<a href="https://soundfry.com/soundfry"><div class="sfb sfb-outline-primary"><i class="soundfry"></i></div></a>
-<a href="https://soundfry.com/soundfry"><div class="sfb sfb-primary"><i class="soundfry"></i> Follow</div></a>
-<a href="https://soundfry.com/soundfry"><div class="sfb sfb-primary"><i class="soundfry"></i></div></a>
-<a href="https://soundfry.com/soundfry"><div class="sfb sfb-primary sfb-sm"><i class="soundfry"></i></div></a>
-<a href="https://soundfry.com/soundfry"><div class="sfb sfb-primary sfb-lg"><i class="soundfry"></i></div></a>
-<a href="https://soundfry.com/soundfry"><div class="sfb" style="color:black;background-color:white;border-color:black"><i class="soundfry"></i> Follow</div></a>
-<a href="https://soundfry.com/soundfry"><div class="sfb" style="color:black;background-color:white;border-color:black"><i class="soundfry"></i></div></a>
-<a href="https://soundfry.com/soundfry"><div class="sfb" style="color:black;background-color:cyan;border-color:black"><i class="soundfry"></i> Follow</div></a>
-<a href="https://soundfry.com/soundfry"><div class="sfb"><i class="soundfry"></i></div></a>
+	<h1>Soundfry FrameWork</h1>
+	<p>This is the Soundfry Framework. Which is used to create the Soundfry profile follow button.</p>
+	<a href="https://soundfry.com/soundfry"><div class="sfb sfb-outline-primary"><i class="soundfry"></i> Follow</div></a>
+	<a href="https://soundfry.com/soundfry"><div class="sfb sfb-outline-primary"><i class="soundfry"></i></div></a>
+	<a href="https://soundfry.com/soundfry"><div class="sfb sfb-primary"><i class="soundfry"></i> Follow</div></a>
+	<a href="https://soundfry.com/soundfry"><div class="sfb sfb-primary"><i class="soundfry"></i></div></a>
+	<a href="https://soundfry.com/soundfry"><div class="sfb sfb-primary sfb-sm"><i class="soundfry"></i></div></a>
+	<a href="https://soundfry.com/soundfry"><div class="sfb sfb-primary sfb-lg"><i class="soundfry"></i></div></a>
+	<a href="https://soundfry.com/soundfry"><div class="sfb" style="color:black;background-color:white;border-color:black"><i class="soundfry"></i> Follow</div></a>
+	<a href="https://soundfry.com/soundfry"><div class="sfb" style="color:black;background-color:white;border-color:black"><i class="soundfry"></i></div></a>
+	<a href="https://soundfry.com/soundfry"><div class="sfb" style="color:black;background-color:cyan;border-color:black"><i class="soundfry"></i> Follow</div></a>
+	<a href="https://soundfry.com/soundfry"><div class="sfb"><i class="soundfry"></i></div></a>
 </body>
 </html>
