--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 	<script async src="app.js" charset="utf-8"></script>
 </head>
 <body>
+	<center>
 	<h1>Soundfry FrameWork</h1>
 	<p>This is the Soundfry Framework. Which is used to create the Soundfry profile follow button.</p>
 	<a href="https://soundfry.com/soundfry"><div class="sfb sfb-outline-primary"><i class="soundfry"></i> Follow</div></a>
@@ -19,5 +20,6 @@
 	<a href="https://soundfry.com/soundfry"><div class="sfb" style="color:black;background-color:white;border-color:black"><i class="soundfry"></i></div></a>
 	<a href="https://soundfry.com/soundfry"><div class="sfb" style="color:black;background-color:cyan;border-color:black"><i class="soundfry"></i> Follow</div></a>
 	<a href="https://soundfry.com/soundfry"><div class="sfb"><i class="soundfry"></i></div></a>
+	</center>
 </body>
 </html>
