--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
 	<center>
 	<h1>Soundfry FrameWork</h1>
-	<p>This is the Soundfry Framework. Which is used to create the Soundfry profile follow button.</p>
+	<p>Soundfry Framework is used to design the Soundfry profile follow button.</p>
 	<a href="https://soundfry.com/soundfry"><div class="sfb sfb-outline-primary"><i class="soundfry"></i> Follow</div></a>
 	<a href="https://soundfry.com/soundfry"><div class="sfb sfb-outline-primary"><i class="soundfry"></i></div></a>
 	<a href="https://soundfry.com/soundfry"><div class="sfb sfb-primary"><i class="soundfry"></i> Follow</div></a>
