--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
 	<center>
-	<h1>Soundfry FrameWork</h1>
+	<h1>Soundfry Framework</h1>
 	<p>Soundfry Framework is used to design the Soundfry profile follow button.</p>
 	<a href="https://soundfry.com/soundfry"><div class="sfb sfb-outline-primary"><i class="soundfry"></i> Follow</div></a>
 	<a href="https://soundfry.com/soundfry"><div class="sfb sfb-outline-primary"><i class="soundfry"></i></div></a>
