--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>Soundfry Follow Button</title>
-	<script async src="app.js" charset="utf-8"></script>
+	<script async src="soundfry.app.js" charset="utf-8"></script>
 </head>
 <body>
 	<center>
